--- a/views/self.ejs
+++ b/views/self.ejs
@@ -6,19 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>斗兽棋</title>
 
-    <link rel="stylesheet" href="/styles/game.css">
+    <link rel="stylesheet" href="styles/game.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/scripts/sketch.js"></script>
-    <script src="/scripts/piece.js"></script>
-    <script src="/scripts/socket.js"></script>
+    <script src="scripts/self.js"></script>
+    <script src="scripts/piece.js"></script>
 </head>
 <body>
     <h1></h1>
     <div id="board"></div>
-
-    <p id="o-name" class="hide"><%= name %></p>
-    <p id="rid" class="hide"><%= id %></p>
 </body>
 </html>
