Pop up Dialog for Self Only

--- a/views/self.ejs
+++ b/views/self.ejs
@@ -12,8 +12,24 @@
     <script src="scripts/self.js"></script>
     <script src="scripts/piece.js"></script>
 </head>
+<scirpt>
+</scirpt>
 <body>
     <h1></h1>
+    <div id="dialog" class="dialog">
+        <button onclick="document.getElementById('dialog').style.display ='none';document.getElementById('board').style.display = 'block';" id="close-dialog"> Close </button>
+    
+        <div id="winning-html">
+            <h1> Hi Won! </h1>
+        </div>
+    
+    
+    
+    
+    </div>
+        
+
     <div id="board"></div>
+    
 </body>
 </html>
