--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -3,6 +3,20 @@
     --width: 7;
     --height: 9;
 }
+.dialog {
+    margin: 0 auto;
+    width: 500px;
+    height: 85vh;
+    background-color: magenta;
+    border-radius: 10px;
+    
+    padding: 10px;
+    display: none;
+}
+
+.dialog button {
+    float: right;
+}
 
 #board {
     width: calc(var(--length) * var(--width));
@@ -12,6 +26,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+   
 }
 
 .hide {
