--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -19,15 +19,25 @@
 }
 
 #board {
+    
+    border: 5px solid black;
+    margin: 0 auto;
+    display: block;
+    
+
+
+
     width: calc(var(--length) * var(--width));
     height: calc(var(--length) * var(--height));
+    /*
     border: 5px solid black;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
    
 }
+
 
 .hide {
     display: none;
