Allow user to access source code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,9 @@
 <body>
     <button onclick='window.location.href = "create";'> Create </button>
     <button onclick='window.location.href = "self";'> Self </button>
+    <a href="https://github.com/Mortis66666/jungle" target="_blank">
+        <button>Source code</button>
+    </a>
     <input type = "text" id="input" placeholder = "Join Code">
     <button onclick = 'if (document.getElementById("input").value) {window.location.href = "game/"+document.getElementById("input").value;}'> Join </button>
 </body>
