Ehm not sure what to write

--- a/views/self.ejs
+++ b/views/self.ejs
@@ -12,8 +12,21 @@
     <script src="scripts/self.js"></script>
     <script src="scripts/piece.js"></script>
 </head>
-<scirpt>
-</scirpt>
+<style>
+    
+    
+    
+    
+
+
+    .board {
+        display: block !important;
+    }
+
+</style>
+<script>
+    
+</script>
 <body>
     <h1></h1>
     <div id="dialog" class="dialog">
@@ -23,7 +36,6 @@
             <h1> Hi Won! </h1>
         </div>
     </div>
-        
-    <div id="board"></div>
+    <div class="board"      id="board"></div>
 </body>
 </html>
