--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,13 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .bar {
+        width: 100%;
+        height: 10vh;
+        background-color: deeppink;
+
+    }
+    .box-1 {
+        display: block;
+        width: 50%;
+        height: 100vh;
+        margin: 0 auto;
+        background-color: grey;
+        text-align: center;
+    }
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: rgb(137, 134, 134);
+    }
+
+    .joincode {
+        width: 185px;
+        height: 50px;
+        border-radius: 25px;
+        place-content: ;
+        background-color: rgb(89, 85, 85);
+        border-color: rgb(173, 167, 167);
+        font-size: 25px;
+        text-align: center;
+        color: rgb(215, 195, 195);
+        
+    }
+    ::placeholder {
+        
+        text-align: center;
+        font-size: 20px;
+        color: rgb(233, 220, 220);
+    }
+    .div-break {
+        height: 10px;
+        width: 10%;
+    }
+    .join, .play-self, .create {
+        border: none;
+        background-color: rgb(73, 61, 61);
+        font-size: 30px;
+        border-radius: 30px;
+        color: rgb(234, 223, 223);
+        padding: 10px;
+        align-items: center;
+    }
+    
+</style>
+<script>
+    function randInt(min, max) {
+            return Math.floor(Math.random()*(max-min+1)+min);
+    }
+
+    function create() {
+        document.querySelector("form").action = `/game/${randInt(1000, 9999)}`;
+        document.querySelector("form").submit();
+    }
+    
+    
+</script>
 <body>
-    <button onclick='window.location.href = "create";'> Create </button>
-    <button onclick='window.location.href = "self";'> Self </button>
-    <a href="https://github.com/Mortis66666/jungle" target="_blank">
-        <button>Source code</button>
-    </a>
-    <input type = "text" id="input" placeholder = "Join Code">
-    <button onclick = 'if (document.getElementById("input").value) {window.location.href = "game/"+document.getElementById("input").value;}'> Join </button>
+
+    <div class="bar" > 
+        
+    </div>
+    <div class="box-1">
+        <div style="height: 25vh"></div>
+        <div class="div-break"></div>
+        <input type = "text" id="input" class="joincode" placeholder = "Join Code">
+        
+        <div class="div-break"></div>
+        <button class="join" onclick = 'if (document.getElementById("input").value) {window.location.href = "/game/"+document.getElementById("input").value;}'> Join </button>
+        <div class="div-break"></div>
+        <form id="id" method="POST" action="" >
+            <input type="hidden" id="id" value="">
+            <button class="create" onclick="create()"> Create </button>
+        </form>
+        <div class="div-break"></div>
+        <button class="play-self" onclick='window.location.href = "self";'> Self </button>
+        <div style="height: 20vh" class="div-break"></div>
+        <a href="https://github.com/Mortis66666/jungle" target="_blank">
+            <button>Source code From GitHub</button>
+        </a>
+        
+        
+    </div>
+    
 </body>
 </html>
