--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -3,13 +3,14 @@
     --width: 7;
     --height: 9;
 }
+
 .dialog {
     margin: 0 auto;
     width: 500px;
     height: 85vh;
     background-color: magenta;
     border-radius: 10px;
-    
+
     padding: 10px;
     display: none;
 }
@@ -19,26 +20,103 @@
 }
 
 #board {
-    
     border: 5px solid black;
-    margin: 0 auto;
     display: none;
-    
-
-
 
     width: calc(var(--length) * var(--width));
     height: calc(var(--length) * var(--height));
-    /*
-    border: 5px solid black;
+
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); */
-   
+    transform: translate(-50%, -50%);
+}
+
+.hide {
+    display: none;
+}
+
+.dialog1 {
+    background-color: rgb(207, 181, 181);
+    width: 50%;
+    height: 20vh;
+    border-radius: 25px;
+    margin: 0 auto;
+    overflow-y: hidden;
+    transform: translateY(-200px);
+    animation-name: none;
+    animation-duration: 2s;
+
+    animation-fill-mode: forwards;
+}
+
+@keyframes dialog1-open {
+    from {}
+
+    to {
+        transform: translateY(10px);
+    }
+}
+
+@keyframes dialog1-close {
+    from {
+        transform: translateY(10px);
+    }
+
+    to {
+        transform: translateY(-210px);
+    }
+}
+
+.awaiting-screen {
+    background-color: rgb(148, 153, 148);
+
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+
+    margin: -181px 0px 0px 0px;
+    display: block;
 }
 
 
-.hide {
+.awaiting-screen-1 {
+    padding: 70px;
+    text-align: center;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#username {
+    background-color: rgb(103, 94, 94);
+    font-size: 30px;
+
+    border-radius: 50px;
+    height: 85px;
+    width: 500px;
+
+    text-align: center;
+    color: rgb(201, 190, 190);
+}
+
+.div-break {
+    height: 132px;
+    width: 10px;
+}
+
+#join {
+    font-size: 25px;
+    height: 50px;
+    width: 300px;
+    border-radius: 36px;
+    background-color: rgb(121, 112, 112);
+    color: rgb(211, 198, 198);
+
+}
+
+#ready-button {
     display: none;
 }
