--- a/views/game.ejs
+++ b/views/game.ejs
@@ -26,9 +26,9 @@
 
             <div class="div-break" style="height: 20px;"></div>
             <div id="usernamenotvalid"></div>
-            <button id="join" onclick="register()"> Join </button>
-            <h1> Join Code: <%= id %> </h1>
-            <h1> Waiting for the second player to join ... </h1>
+            <button id="join" onclick="register()"> Join </button> 
+            <h1 id="join-2"> Join Code: <%= id %> </h1>
+            <h1 id="join-3"> Waiting for the second player to join ... </h1> 
             <button id="ready-button" onclick="ready()"> Ready </button>
         </div>
     </div>
