--- a/views/game.ejs
+++ b/views/game.ejs
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h1></h1>
+    <button id="resign">Resign</button>
     <div class="dialog1" id="dialog1">
         <h1> h1 </h1>
     </div> 
