--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
             <button class="create" onclick="create()"> Create </button>
         </form>
         <div class="div-break"></div>
-        <button class="play-self" onclick='window.location.href = "self";'> Self </button>
+        <button class="play-self" onclick='window.location.href = "self";'> Play with your self </button>
         <div style="height: 20vh" class="div-break"></div>
         <a href="https://github.com/Mortis66666/jungle" target="_blank">
             <button>Source code From GitHub</button>
