--- a/views/game.ejs
+++ b/views/game.ejs
@@ -27,10 +27,10 @@
 
             <div class="div-break" style="height: 20px;"></div>
             <div id="usernamenotvalid"></div>
-            <button id="join" onclick="register()"> Join </button> 
+            <button id="join" class="btn" onclick="register()"> Join </button> 
             <h1 id="join-2"> Join Code: <%= id %> </h1>
             <h1 id="join-3"> Waiting for the second player to join ... </h1> 
-            <button id="ready-button" onclick="ready()"> Ready </button>
+            <button id="ready-button" class="btn" onclick="ready()"> Ready </button>
         </div>
     </div>
     <div id="board"></div>
