--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -4,7 +4,7 @@
     --height: 9;
 }
 
-.dialog {
+/* .dialog {
     margin: 0 auto;
     width: 500px;
     height: 85vh;
@@ -17,7 +17,7 @@
 
 .dialog button {
     float: right;
-}
+} */
 
 #board {
     border: 5px solid black;
@@ -43,15 +43,22 @@
     border-radius: 25px;
     margin: 0 auto;
     overflow-y: hidden;
-    transform: translateY(-200px);
-    animation-name: none;
+
+    animation-name: dialog1-close;
     animation-duration: 2s;
 
     animation-fill-mode: forwards;
+
+    
+    
+    display: block;
 }
 
 @keyframes dialog1-open {
-    from {}
+    from {
+        
+        transform: translateY(-350px);
+    }
 
     to {
         transform: translateY(10px);
@@ -64,7 +71,7 @@
     }
 
     to {
-        transform: translateY(-210px);
+        transform: translateY(-350px);
     }
 }
 
