--- a/views/game.ejs
+++ b/views/game.ejs
@@ -18,7 +18,7 @@
     <h1></h1>
     <button id="resign">Resign</button>
     <div class="dialog1" id="dialog1">
-        <h1> h1 </h1>
+        <p id="dialog-message"></p>
     </div> 
     <div class="awaiting-screen" id="awaiting-screen">
         <div class="div-break"></div>
