--- a/views/game.ejs
+++ b/views/game.ejs
@@ -19,6 +19,7 @@
     <button id="resign">Resign</button>
     <div class="dialog1" id="dialog1">
         <p id="dialog-message"></p>
+        <span id="dialog-close">✖</span>
     </div> 
     <div class="awaiting-screen" id="awaiting-screen">
         <div class="div-break"></div>
