--- a/views/self.ejs
+++ b/views/self.ejs
@@ -14,12 +14,9 @@
 </head>
 <body>
     <h1></h1>
-    <div id="dialog" class="dialog">
-        <button onclick="document.getElementById('dialog').style.display ='none';document.getElementById('board').style.display = 'block';" id="close-dialog"> Close </button>
-    
-        <div id="winning-html">
-            <h1> Hi Won! </h1>
-        </div>
+    <div class="dialog1" id="dialog1">
+        <p id="dialog-message"></p>
+        <span id="dialog-close">✖</span>
     </div>
     <div class="board" id="board"></div>
 </body>
