--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -52,6 +52,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+    
+    display: none;
 }
 
 @keyframes dialog1-open {
