Allow user to switch to animal icon display

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,8 @@
         </form>
         <div class="div-break"></div>
         <button class="btn" onclick='window.location.href = "self";'> Play with yourself </button>
+        <div class="div-break"></div>
+        <a href="/settings"><button class="btn">Settings</button></a>
         <div style="height: 20vh" class="div-break"></div>
         <a href="https://github.com/Mortis66666/jungle" target="_blank">
             <button class="btn" id="src">Source code From GitHub</button>
