--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0e/Doushouqi-elephant.svg">
+
     <link rel="stylesheet" href="/styles/home.css">
     <script src="/scripts/home.js"></script>
 </head>
