--- a/views/self.ejs
+++ b/views/self.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>斗兽棋</title>
 
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0e/Doushouqi-elephant.svg">
+
     <link rel="stylesheet" href="styles/game.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
