--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
 
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0e/Doushouqi-elephant.svg">
+
     <script src="/scripts/settings.js" defer></script>
 </head>
 <body>
