--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -25,7 +25,6 @@ body {
     font-size: 25px;
     text-align: center;
     color: rgb(215, 195, 195);
-    
 }
 
 ::placeholder {
@@ -55,4 +54,28 @@ body {
 
 #src {
     font-size: 15px;
+}
+
+#create-popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    
+    width: 40%;
+    height: 40%;
+    background-color: white;
+
+    border-radius: 10px;
+    
+    display: none;
+}
+
+#close {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 12px 16px;
+    border-radius: 20px;
 }
