--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,23 +9,14 @@
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0e/Doushouqi-elephant.svg">
 
     <link rel="stylesheet" href="/styles/home.css">
-    <script src="/scripts/home.js"></script>
 </head>
 <body>
     <div class="box-1">
         <div style="height: 25vh"></div>
         <div class="div-break"></div>
-        <input type = "text" id="input" class="joincode" placeholder = "Join Code">
+        <a href="/play"><button class="btn">Play</button></a>        
         
-        <div class="div-break"></div>
-        <button class="btn" onclick = 'if (document.getElementById("input").value) {window.location.href = "/game/"+document.getElementById("input").value;}'> Join </button>
-        <div class="div-break"></div>
-        <form id="id" method="POST" action="" >
-            <input type="hidden" id="id" value="">
-            <button class="btn" onclick="create()"> Create new game </button>
-        </form>
-        <div class="div-break"></div>
-        <button class="btn" onclick='window.location.href = "self";'> Play with yourself </button>
+
         <div class="div-break"></div>
         <a href="/settings"><button class="btn">Settings</button></a>
         <div class="div-break"></div>
