Forgotten play with urself

--- a/views/play.ejs
+++ b/views/play.ejs
@@ -30,6 +30,12 @@
         <div class="div-break"></div>
 
         <button class="btn" onclick="openPopup()">Create game</button>
+
+        <div class="div-break"></div>
+        
+        <a href="/self">
+            <button class="btn">Play with yourself</button>
+        </a>
     </div>
 
     <div id="create-popup">
