--- a/views/play.ejs
+++ b/views/play.ejs
@@ -40,7 +40,7 @@
 
     <div id="create-popup">
         <span id="close" onclick="closePopup()">✖</span>
-        <form action="create" method="post">
+        <form action="/create" method="post">
             <select name="public" id="public">
                 <option value="1">Public</option>
                 <option value="0">Private</option>
